objects/MMPJ_TOPG_Outlet__c.object
<CustomObject>
    <description>Used for MMPJ TopGun app</description>
    <fields>
        <fullName>MMPJ_TOPG_Adress__c</fullName>
        <formula>MMPJ_TOPG_Street__c &amp; BR()&amp; MMPJ_TOPG_City__c &amp;BR()&amp; MMPJ_TOPG_Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On Trade</fullName>
                </value>
                <value>
                    <fullName>Off Trade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_ContactName__c</fullName>
        <label>Outlet Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_DescriptionPictures__c</fullName>
        <label>Comment about Outlet</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_Email__c</fullName>
        <label>Outlet Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>MMPJ TOPGUN</description>
        <label>Market</label>
        <referenceTo>MMPJ_TOPG_Market__c</referenceTo>
        <relationshipName>Outlets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_OutletCategory__c</fullName>
        <label>Outlet Image</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MMPJ_TOPG_Channel__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Mainstream</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Leading</fullName>
                </value>
                <value>
                    <fullName>Iconic</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_OutletType__c</fullName>
        <label>Outlet Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MMPJ_TOPG_Channel__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Cash&amp;Carry</fullName>
                </value>
                <value>
                    <fullName>Convenience</fullName>
                </value>
                <value>
                    <fullName>Discounters</fullName>
                </value>
                <value>
                    <fullName>High Energy Bar</fullName>
                </value>
                <value>
                    <fullName>Hyper / Supermarkets</fullName>
                </value>
                <value>
                    <fullName>Liquor Specialists</fullName>
                </value>
                <value>
                    <fullName>Low Energy Bar</fullName>
                </value>
                <value>
                    <fullName>Night Club</fullName>
                </value>
                <value>
                    <fullName>On Line</fullName>
                </value>
                <value>
                    <fullName>Restaurant</fullName>
                </value>
                <value>
                    <fullName>Traditional Off Trade</fullName>
                </value>
                <value>
                    <fullName>Traditional On Trade (Asia)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>MMPJ TOPGUN</description>
        <label>Partner</label>
        <referenceTo>MMPJ_TOPG_Partner__c</referenceTo>
        <relationshipName>Outlets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_PostalCode__c</fullName>
        <label>Postal Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_State__c</fullName>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_Street__c</fullName>
        <label>Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_VisitDate__c</fullName>
        <label>Last Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_Visitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last MMPJ Visitor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Outlets</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Outlet</label>
    <nameField>
        <label>Outlet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outlets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>